--- a/templates/base.html
+++ b/templates/base.html
@@ -11,12 +11,12 @@
     <title>Hello, world!</title>
   </head>
   <body>
-    <div class="alert alert-primary" role="alert">
-        {{ object.title }}
-      </div>
-    <div class="alert alert-primary" role="alert">
-        {{ object.memo }}
-    </div>
+    {% block header %}
+    {% endblock header %}
+
+    {% block content %}
+    {% endblock content %}
+
 
     <!-- Optional JavaScript; choose one of the two! -->
 
@@ -30,6 +30,3 @@
     -->
   </body>
 </html>
-
-
-
